--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Fossified
-description: All things free and open source.<br>Suggest topics and speakers <a href="https://github.com/fossified/podcast">here</a> and get your RSS feed <a href="https://pod.fossified.com/podcast.rss">here</a>
-author: Daniel, Henrik, Magnus and Johan
+description: All things free and open source.<br><br>Suggest topics and speakers <a href="https://github.com/fossified/podcast">here</a> and get your RSS feed <a href="https://pod.fossified.com/podcast.rss">here</a>
+author: [Daniel](https://github.com/bagder), [Henrik](https://github.com/hesa), [Magnus](https://github.com/mhagander) and [Johan](https://github.com/e8johan)
 email: info@fossified.com
 lang: en-us
 copyright: "&#x2117; &amp; &#xA9; 2023"
